# watchfile

./: Cargo.toml  LICENSE  README.md  config.yaml  note.md
src/: main.rs
static/: index.html  style.css
